--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node dist/server.js",
+    "predeploy": "npm run build",
+    "deploy": "npx serverless deploy",
     "offline": "npx serverless offline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +26,12 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "aws-sdk": "^2.1692.0",
+    "crypto": "^1.0.1",
     "express": "^4.21.2",
+    "ioredis": "^5.4.2",
+    "openai": "^4.79.1",
     "serverless-http": "^3.2.0"
   }
 }
