--- a/serverless.yml
+++ b/serverless.yml
@@ -5,14 +5,30 @@ frameworkVersion: "3"
 provider:
   name: aws
   runtime: nodejs20.x
+  region: ap-south-1
+  iam:
+    role:
+      statements:
+        - Effect: "Allow"
+          Action:
+            - "lambda:InvokeFunction" # Permission to invoke other Lambdas
+          Resource: "*"
+  environment:
+    OPEN_AI_API_KEY: ${env:OPEN_AI_API_KEY}
+    REDIS_HOST: ${env:REDIS_HOST}
+    REDIS_PORT: ${env:REDIS_PORT}
+    REDIS_PASSWORD: ${env:REDIS_PASSWORD}
 
 plugins:
   - serverless-offline
 
 functions:
-  hello:
-    handler: dist/serverlessHandler.handler
+  jokesUpdater:
+    handler: dist/serverlessHandler.jokesUpdater
+
+  application:
+    handler: dist/serverlessHandler.api
     events:
-      - httpApi:
-          path: /hello
-          method: get
+      - http: ANY /
+      - http: 'ANY {proxy+}'
+
